# modeling_angular_motion

./: .gitignore
1_A/: grafics.py  main_1A.py  rkk4.py
1_B/: classes.py  grafics.py  main_1B.py  rkk4.py
2_A/: classes.py  grafics.py  main_2A.py  rkk4.py
2_B/: classes.py  graffics_plotly.py  grafics.py  main_2B.py  text_result.py
2_B/result/days_14/: output.txt
2_B/result/other/: output.txt
2_С/: classes.py  graffics_plotly.py  grafics.py  main_2C.py  rkk4.py  text_result.py
2_С/Gravity/: CMakeLists.txt  gravity_ITRF.cpp  main.cpp
2_С/result/days_14/: output.txt
2_С/result/other/: output.txt
2_С/код Маштакова/: ITRF2GCRF_example.m  gravity_example.m
2_С/код Маштакова/+frame_transformation/: simpleGCRF2ITRF.m
2_С/код Маштакова/+models/: getGravNxN.m  legendreNxN.m  loadCoefsGravNxN.m  normComputeGrav.m
2_С/код Маштакова/+models/field_constants/: EGM2008_to2190_TideFree_180.txt
2_С/код Маштакова/+time_transformation/: JD2JD2000.m  JD2MJD.m  JD2date.m  JD2daysFromYearBegin.m  JD2decYear.m  JD2year.m  MJD2JD.m  date2JD.m
2_С/код Маштакова/+time_transformation/data/: JD2000.txt  modified_JD.txt
